# kanobi

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: app.json  package.json
apps/mobile/app/: index.tsx
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
apps/web/src/context/: tenant-selection.tsx  theme.tsx
apps/web/src/lib/: workspace-api.ts
apps/web/src/pages/: Chat.tsx  Companies.tsx  CoworkGroups.tsx  CoworkMeetingTypes.tsx  CoworkMeetings.tsx  CoworkOverview.tsx  CoworkPlaceholder.tsx  CoworkStrategy.tsx  CoworkUsers.tsx  DangerZone.tsx  Home.tsx  Integrations.tsx  MissionControl.tsx  Permissions.tsx  Profile.tsx  Requests.tsx  SeedData.tsx  Users.tsx  Welcome.tsx
backend/: Dockerfile  drizzle.config.ts  package.json  tsconfig.json
backend/drizzle/: 0000_superuser_foundation.sql  0001_roles_permissions_foundation.sql  0002_platform_operator_profiles.sql  0003_simple_permission_blocks.sql  0004_tenant_scoped_role_permissions.sql  0005_auth_sessions.sql
backend/src/: index.ts
backend/src/db/: index.ts  migrate.ts  schema.ts
backend/src/routes/: chat.ts  health.ts  workspace.ts
