[package]
name = "kanobi-desktop"
version = "0.1.0"
description = "Kanobi Desktop App"
authors = ["Kanobi Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kanobi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kanobi-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
